# compiler-admonitions

./: CMakeLists.txt  default_compiler_flags.txt  main.cpp  readme.adoc  test.py
cmake/: clang_flags.cmake  compiler_settings.cmake  gcc_flags.cmake  msvc_flags.cmake  windows_flags.cmake
test/fail/: format.cpp  local_adress.cpp  return_type.cpp
test/success/: debug_iterator.cpp  simple_main.cpp
test/warn/: nullptr.cpp  sign_conversion.cpp  throw_spec.cpp
